# nyc

./: .gitignore  FUTURE.md  NETWORKING.md  README.md  REBUILD.md  pyproject.toml  spec.md
nyc/: app.py  config.py  defaults.py  peers.py
nyc/client/: privops.py  privops_fake.py  spec.md  vm_deps.py
nyc/reconciler/: executor.py  loop.py  overlay_pass.py  pass_once.py  pubip_pass.py  snapshots_pass.py  spec.md  task_runner.py  ttl_pass.py  vms_pass.py  volumes_pass.py
nyc/routers/: __init__.py  _proxy.py  domains.py  proxy.py  public_ips.py  reconcile.py  snapshots.py  spec.md  tasks.py  vms.py  volumes.py  vpcs.py
nyc/tables/: __init__.py  domains.py  proxies.py  public_ips.py  snapshots.py  spec.md  tasks.py  vms.py  volumes.py  vpcs.py
scripts/: cluster.toml.example  deploy.prompt.md  deploy.py  fetch_artifacts.sh  inject_resolv.sh  inject_ssh_key.sh  install_firecracker.sh  inventory.py  preflight.py  provision.py  provision.sh  spec.md  stage.sh  teardown.py  teardown.sh
scripts/.nyc-deploy/: id_ed25519  id_ed25519.pub
scripts/templates/: Caddyfile.j2  nyc-caddy.service.j2  nyc-node.service.j2  pub-bridge.yaml.j2  sudoers.j2
tests/: conftest.py  spec.md  test_client_env.py  test_client_network.py  test_client_overlay.py  test_domains_router.py  test_lvm_pool.py  test_overlay_pass.py  test_privops_fake.py  test_proxy.py  test_proxy_caddyfile.py  test_pubip_client.py  test_public_ip_router.py  test_reconciler.py  test_snapshots_crud.py  test_spawn.py  test_stage_e2e.py  test_task_executor.py  test_vms_crud.py  test_volumes_crud.py  test_vpcs_crud.py
(+52 files in other folders)
