[project]
name = "nyc"
version = "0.1.0"
description = "Distributed Firecracker VM manager built on dadar."
requires-python = ">=3.11"
dependencies = [
    "dadar",
    "fastapi>=0.115",
    "pydantic>=2",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[tool.dadar]
app = "nyc.app"
tables_dir = "nyc/tables"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nyc"]

[tool.uv.sources]
dadar = { path = "../dadar", editable = true }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-x -ra"
